--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
                 <h2 class="hero-subtitle">ICT Systems Analyst | Anglo American</h2>
                 <p class="hero-description">Brisbane, Australia • 3+ Years Enterprise IT Experience</p>
                 <div class="hero-buttons">
-                   <a href="Sukumar_resume.pdf" target="_blank" class="btn btn-primary">
+  <a href="/sukumar_portfolio_new.pdf" target="_blank" class="btn btn-primary">
     <i class="fas fa-download"></i>
     Download Resume
-                    <a href="https://au.linkedin.com/in/sukumarreddygajulapalli" target="_blank" class="btn btn-secondary">
-                        <i class="fab fa-linkedin"></i>
-                        Connect on LinkedIn
-                    </a>
-                </div>
+  </a>
+  <a href="https://au.linkedin.com/in/sukumarreddygajulapalli" target="_blank" class="btn btn-secondary">
+    <i class="fab fa-linkedin"></i>
+    Connect on LinkedIn
+  </a>
+</div>
             </div>
         </div>
     </section>
