--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="hero-subtitle">ICT Systems Analyst | Anglo American</h2>
                 <p class="hero-description">Brisbane, Australia • 3+ Years Enterprise IT Experience</p>
                 <div class="hero-buttons">
-  <a href="/Sukumar_resume.pdf" target="_blank" class="btn btn-primary">
+  <a href="Sukumar_resume.pdf" target="_blank" class="btn btn-primary">
     <i class="fas fa-download"></i>
     Download Resume
   </a>
